<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuSettings"
        android:title="@string/settings"
        android:icon="@drawable/baseline_settings_24"
        app:showAsAction="always" />
    <item
        android:id="@id/menuFavorites"
        android:title="@string/favorites"
        android:icon="@drawable/baseline_favorite_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuAddContact"
        android:title="@string/add_contact"
        android:icon="@drawable/baseline_person_add_24"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuFeedback"
        android:title="@string/give_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuCloseApp"
        android:title="@string/close_app"
        app:showAsAction="never" />

</menu>
