<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/first_name"
            android:textColorHint="#8D6E63"
            tools:ignore="TextFields,VisualLintTextFieldSize,TouchTargetSizeCheck" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/last_name"
            android:importantForAutofill="no"
            android:textColorHint="#8D6E63"
            tools:ignore="TextFields,VisualLintTextFieldSize,TouchTargetSizeCheck" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birth_date"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        android:importantForAutofill="no"
        tools:ignore="TextFields,VisualLintTextFieldSize" />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:hint="@string/country"
          android:minHeight="48dp"
          android:textColorHint="#8D6E63"
          android:importantForAutofill="no"
          tools:ignore="TextFields,VisualLintTextFieldSize" />

      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="3"
          android:text="@string/apply"
          tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize,VisualLintBounds" />

  </LinearLayout>

</LinearLayout>

